@@ -1,7 +1,2 @@
 #!/bin/sh
-java \
--XX:+UnlockExperimentalVMOptions \
--XX:+UseCGroupMemoryLimitForHeap \
--XX:MaxRAMFraction=2 \
--XshowSettings:vm \
-$* -jar judge-d-agent.jar
+java $* -jar judge-d-agent.jar
